--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -343,7 +343,7 @@
                 bg-[#0B0B2B] flex flex-col justify-center items-center px-8 py-10 text-white">
 
                             <button type="button" mat-icon-button
-                                class="absolute top-4 left-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
+                                class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
                                 (click)="heroCard.face = 'front'" (touchstart)="heroCard.face = 'front'">
                                 <mat-icon class="text-white">arrow_back</mat-icon>
                             </button>
