--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -70,7 +70,7 @@
                                                 </mat-optgroup>
                                             </mat-select> -->
 
-                                            <div *ngIf="tipoDestino === 2" class="w-full px-5 py-2.5 rounded-full border-2
+                                            <!-- <div *ngIf="tipoDestino === 2" class="w-full px-5 py-2.5 rounded-full border-2
             text-sm md:text-base font-semibold text-left
             cursor-pointer transition duration-200 flex items-center" [ngClass]="{
        'border-[#F9B44B] text-[#F9B44B]': tipoDestino === 2
@@ -95,7 +95,7 @@
                                                     </mat-optgroup>
                                                 </ng-container>
 
-                                            </mat-autocomplete>
+                                            </mat-autocomplete> -->
 
                                             <!-- <div class="w-full px-5 py-2.5 rounded-full border-2
          text-sm md:text-base font-semibold text-left
