--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -33,6 +33,9 @@
                             <span>{{ punto }}</span>
                         </li>
                     </ul>
+                    <div class="mt-5">
+                        <span ><b> Nota:</b> Algunas amenidades pueden tener un costo adicional. </span>
+                    </div>
                 </mat-tab>
 
             </mat-tab-group>
@@ -66,6 +69,9 @@
                             <span>{{ punto }}</span>
                         </li>
                     </ul>
+                    <div class="mt-5">
+                        <span ><b> Nota:</b> Algunas amenidades pueden tener un costo adicional. </span>
+                    </div>
                 </mat-expansion-panel>
             </mat-accordion>
             }
@@ -642,6 +648,11 @@
                                 <span class="text-sm font-medium text-green-700">Quiero recibir ofertas y descuentos
                                     exclusivos</span>
                             </label>
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-medium text-green-700 mb-1">Peticiones especiales (Opcional)</label>
+                            <textarea formControlName="especiales" class="input-underline"></textarea>
                         </div>
 
                     </form>
